--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "version": "0.0.1",
   "scripts": {
     "dev": "sapper dev",
-    "build": "sapper build --legacy",
+    "now": "sapper build --legacy && now",
+    "b": "sapper build --legacy",
     "export": "sapper export --legacy",
     "start": "node __sapper__/build",
     "cy:run": "cypress run",
@@ -15,6 +16,7 @@
     "bulma": "^0.7.4",
     "compression": "^1.7.1",
     "polka": "^0.5.0",
+    "rollup-plugin-json": "^4.0.0",
     "sirv": "^0.4.0"
   },
   "devDependencies": {
