--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
     "test": "run-p --race dev cy:run"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "bulma": "^0.7.4",
     "compression": "^1.7.1",
     "polka": "^0.5.0",
-    "rollup-plugin-json": "^4.0.0",
     "sirv": "^0.4.0"
   },
   "devDependencies": {
@@ -34,6 +34,7 @@
     "rollup-plugin-node-resolve": "^4.0.0",
     "rollup-plugin-replace": "^2.0.0",
     "rollup-plugin-svelte": "^5.0.1",
-    "rollup-plugin-terser": "^4.0.4"
+    "rollup-plugin-terser": "^4.0.4",
+    "rollup-plugin-json": "^4.0.0"
   }
 }
