--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "sapper dev",
     "now": "sapper build && now",
     "b": "sapper build",
-    "changelog": "npx changelog",
+    "changelog": "npx generate-changelog",
     "export": "sapper export",
     "start": "node __sapper__/build",
     "cy:run": "cypress run",
